<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/login_edit_txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/login_edit_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/login_button_native_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_login"/>

    <Button
        android:id="@+id/login_button_native_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/native_register"/>

    <Button
        android:id="@+id/login_button_kakao_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kakao_login"
        android:backgroundTint="@color/kakao"
        android:textColor="@color/black"/>

</LinearLayout>